--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: 测试
+description: 测试测试测试
+show_downloads: ture
+google_analytics: true
 theme: jekyll-theme-cayman
