--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 测试
-description: 测试测试测试
+title: 不知道写些什么东西的博客
+description: By FuxkTME
 show_downloads: ture
 google_analytics: true
 theme: jekyll-theme-cayman
