--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 不知道写些什么东西的博客
 description: By FuxkTME
-show_downloads: ture
+show_downloads: false
 google_analytics: true
 theme: jekyll-theme-cayman
